--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
         </div>
         <div class="table">
-            <div class="row btn">
+            <div class="policy">
                 <button class="md-button content-center">Proceed To Payment</button>
             </div>
         </div>
