--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
         <div class="table">
             <div class="policy">
-                <button class="md-button content-center">Proceed To Payment</button>
+                <button class="md-button margin-null content-center">Proceed To Payment</button>
             </div>
         </div>
         <div class="table">
