--- a/index.html
+++ b/index.html
@@ -1,94 +1,108 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./static/angular-material.css">
-    <link rel="stylesheet" href="./static/style.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="./static/angular-material.js"></script>
-    <script src="./static/script.js"></script>
-    <title>Step 2</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Angular Material style sheet -->
+	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.12/angular-material.min.css">
+	<!-- Material Icon -->
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<!-- Your StyleSheet   -->
+	<link rel="stylesheet" href="./static/style.css">
 </head>
-<body>
-    <div class="main">
-        <md-toolbar>
-            <h2 class="md-toolbar-tools ">
-                <span>Tariff Details</span>
-            </h2>
-        </md-toolbar>
-        <md-divider class="light-max"></md-divider>
-        <md-content>
-            <md-list class="details ">
-                <md-list-item class="item">
-                    Rooms <span class="spacing-right light">&nbsp;2</span>Adults <span class="light">&nbsp;4</span>
-                </md-list-item>
-            </md-list>
-        </md-content>
-        <md-divider class="light-max"></md-divider>
-        <div class="row">
-            <div class="col col-6 flex-50 content-center">
-                <div class="light small">Check-In : 2:00 PM</div>
-                <div class="info">23 Sept 2017,Wed</div>
-            </div>
-            <div class="col col-6 flex-50 content-center">
-                <div class="light small">Check-Out : 12:00 PM</div>
-                <div class="info">23 Sept 2017,Wed</div>
-            </div>
-        </div>
-        <md-divider class="light-max"></md-divider>
-        <md-content class="row">
-            <div class="row">
-                <div class="col col-4">
-                    <div class="">Semi Deluxe</div>
-                </div>
-                <div class="col col-4 content-center ">
-                    <div class="light">
-                        <md-button><i class="material-icons icon">create</i></md-button>&nbsp;<span class="info">x1</span>
-                    </div>
-                </div>
-                <div class="col col-4 content-right">
-                    <div class="price">INR 10,500&nbsp;<span class="light cross"></span></div>
-                </div>
-                <div class="light info format-text small">AC Room Only</div>
-            </div>
-        </md-content>
-        <md-content class="row">
-            <div class="row">
-                <div class="col col-4">
-                    <div class="">Semi Deluxe</div>
-                </div>
-                <div class="col col-4 content-center ">
-                    <div class="light">
-                        <md-button><i class="material-icons icon">create</i></md-button>&nbsp;<span class="info">x1</span>
-                    </div>
-                </div>
-                <div class="col col-4 content-right">
-                    <div class="price">INR 12,500&nbsp;<span class="light cross"></span></div>
-                </div>
-                <div class="light info format-text small">AC Room With Br...</div>
-            </div>
-        </md-content>
-        <md-divider class="light-max"></md-divider>
-        <div class="table">
-            <div class="row">
-                <div class="col col-6">Total Payable</div>
-                <div class="col col-6 content-right">INR 23,000</div>
-                <div class="flor-green info">
-                    View all details
-                </div>
-            </div>
-        </div>
-        <div class="table">
-            <div class="policy">
-                <button class="md-button margin-null content-center">Proceed To Payment</button>
-            </div>
-        </div>
-        <div class="table">
-            <div class="small policy">
-                By proceeding you agree to the <a href="#">Hotel Booking Policy, Hotel Cancellation Policy and Terms & Conditions</a> of Ganga Kinare.
-            </div>
-        </div>
-    </div>
+<body ng-app="NewApp" ng-controller="AppCtrl">
+    <!-- Your HTML Content Here -->
+	<div flex="30" flex-offset="35" layout="column"> 
+		<div layout="column" class="main">
+			<div class="table" layout="column" layout-align=" center">
+				<header>Tariff Details</header>
+			</div>
+			<md-divider></md-divider>
+			<div class="table" layout="row details">
+				<div flex="33">
+					Rooms <span class="light">2</span>
+				</div>
+				<div flex="33">
+					Adult <span class="light">4</span>
+				</div>
+			</div>
+			<md-divider></md-divider>
+			<div class="table" layout="row">
+				<div flex="50" class="align-center" layout="column">
+					<div class="light small">check-in : 2:00 p.m.</div>
+					<div class="info">23 Sept 2017,Wed</div>
+				</div>
+				<div flex="50" class="align-center" layout="column">
+					<div class="light small">check-out : 12:00 p.m.</div>
+					<div class="info">23 Sept 2017,Wed</div>
+				</div>
+			</div>
+			<md-divider></md-divider>
+			<div class="table">
+				<div layout="row" class="table">
+					<div layout="column" flex="33">
+						<div>Semi Deluxe</div>
+						<div class="format-text small light">AC Room Only</div>
+					</div>
+					<div class="align-center" flex layout="column">
+						<div class="light info">
+							<i class="material-icons icon">create</i>x1
+						</div>
+					</div>
+					<div flex="33" layout="column">
+						<div class="cross align-right">INR 10,500</div>
+					</div>
+				</div>
+				<div layout="row" class="table">
+					<div layout="column" flex="33">
+						<div>Semi Deluxe</div>
+						<div class="format-text small light">AC Room with Br...</div>
+					</div>
+					<div class="align-center" flex layout="column">
+						<div class="light info">
+							<i class="material-icons icon">create</i>x1
+						</div>
+					</div>
+					<div flex="33" layout="column">
+						<div class="cross align-right">INR 12,500</div>
+					</div>
+				</div>
+			</div>
+			<md-divider></md-divider>
+			<div layout="row" class="table">
+				<div flex="50" layout="column">
+					<div>Total Payable</div>
+					<div class="flor-green info">View all details</div>
+				</div>
+				<div flex="50" layout="column" class="align-right">
+					INR 23,000
+				</div>
+			</div>
+			<div layout="row">
+				<md-button class="main-button" flex-offset="5" flex="90">Proceed to Payment</md-button>
+			</div>
+			<div layout="row">
+				<div flex-offset="5" flex="90" class="small policy">
+					By proceeding you agree to the <a href="#">Hotel Booking Policy, Hotel Cancellation Policy and Terms & Conditions</a> of Ganga Kinare.
+				</div>
+			</div>
+		</div>
+	</div>
+    <!-- End Code -->
+  	<!-- Angular Material requires Angular.js Libraries -->
+  	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.6/angular.min.js"></script>
+  	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.6/angular-animate.min.js"></script>
+  	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.6/angular-aria.min.js"></script>
+  	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.6/angular-messages.min.js"></script>
+  	<!-- Angular Material Library -->
+  	<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.12/angular-material.min.js"></script>
+  
+  	<!-- Your application bootstrap  -->
+  	<script type="text/javascript">    
+    /**
+     * You must include the dependency on 'ngMaterial' 
+     */
+    	var App = angular.module('NewApp', ['ngMaterial','ngMessages']);
+    	App.controller('AppCtrl', function($scope) {});
+  	</script>
 </body>
 </html>
