--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body ng-app="NewApp" ng-controller="AppCtrl">
     <!-- Your HTML Content Here -->
-	<div flex="30" flex-offset="35" layout="column"> 
+	<div flex="30" flex-md="40" flex-sm="60" flex-offset-sm="20" flex-xs="90" flex-offset-xs="5" flex-offset="35" flex-offset-md="30" layout="column"> 
 		<div layout="column" class="main">
 			<div class="table" layout="column" layout-align=" center">
 				<header>Tariff Details</header>
