--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
 			<md-divider></md-divider>
 			<div class="table" layout="row details">
 				<div flex="33">
-					Rooms <span class="light">2</span>
+					Rooms &nbsp;<span class="light">2</span>
 				</div>
 				<div flex="33">
-					Adult <span class="light">4</span>
+					Adult &nbsp;<span class="light">4</span>
 				</div>
 			</div>
 			<md-divider></md-divider>
 			<div class="table" layout="row">
-				<div flex="50" class="align-center" layout="column">
-					<div class="light small">check-in : 2:00 p.m.</div>
+				<div flex="25" flex-offset="10" layout="column">
+					<div class="light small">Check-in : 2:00 p.m.</div>
 					<div class="info">23 Sept 2017,Wed</div>
 				</div>
-				<div flex="50" class="align-center" layout="column">
-					<div class="light small">check-out : 12:00 p.m.</div>
+				<div flex="25" flex-offset="30" class="align-right" layout="column">
+					<div class="light small">Check-out : 12:00 p.m.</div>
 					<div class="info">23 Sept 2017,Wed</div>
 				</div>
 			</div>
