--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div flex="30" flex-md="40" flex-sm="60" flex-xs="90" flex-offset="35" flex-offset-md="30" flex-offset-sm="20"  flex-offset-xs="5" layout="column"> 
 		<div layout="column" class="main">
 			<div class="table" layout="column" layout-align=" center">
-				<header>Tariff Details</header>
+				<header class="format-text">Tariff Details</header>
 			</div>
 			<md-divider></md-divider>
 			<div class="table" layout="row details">
@@ -22,7 +22,7 @@
 					Rooms &nbsp;<span class="light">2</span>
 				</div>
 				<div flex="33">
-					Adult &nbsp;<span class="light">4</span>
+					Adults &nbsp;<span class="light">4</span>
 				</div>
 			</div>
 			<md-divider></md-divider>
@@ -40,8 +40,8 @@
 			<div class="table">
 				<div layout="row" class="table">
 					<div layout="column" flex="33">
-						<div>Semi Deluxe</div>
-						<div class="format-text small light">AC Room Only</div>
+						<div class="format-text">Semi Deluxe</div>
+						<div class="small light">AC Room Only</div>
 					</div>
 					<div class="align-center" flex layout="column">
 						<div class="light info">
@@ -54,8 +54,8 @@
 				</div>
 				<div layout="row" class="table">
 					<div layout="column" flex="33">
-						<div>Semi Deluxe</div>
-						<div class="format-text small light">AC Room with Br...</div>
+						<div class="format-text">Semi Deluxe</div>
+						<div class="small light">AC Room with Br...</div>
 					</div>
 					<div class="align-center" flex layout="column">
 						<div class="light info">
