--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
 			</div>
 			<md-divider></md-divider>
 			<div class="table" layout="row">
-				<div flex="40" flex-offset="15" layout="column">
+				<div flex="40" layout="column">
 					<div class="light small">Check-in : 2:00 p.m.</div>
 					<div class="info">23 Sept 2017,Wed</div>
 				</div>
-				<div flex="40" flex-offset="10" layout="column">
+				<div flex="40" layout-align="end end" flex-offset="20" layout="column">
 					<div class="light small">Check-out : 12:00 p.m.</div>
 					<div class="info">23 Sept 2017,Wed</div>
 				</div>
 			</div>
 			<md-divider></md-divider>
 			<div class="table">
-				<div layout="row" class="table">
+				<div layout="row" class="room-row">
 					<div layout="column" flex="33">
 						<div class="format-text">Semi Deluxe</div>
 						<div class="small light">AC Room Only</div>
@@ -52,7 +52,7 @@
 						<div class="cross align-right">INR 10,500</div>
 					</div>
 				</div>
-				<div layout="row" class="table">
+				<div layout="row">
 					<div layout="column" flex="33">
 						<div class="format-text">Semi Deluxe</div>
 						<div class="small light">AC Room with Br...</div>
@@ -69,7 +69,7 @@
 			</div>
 			<md-divider></md-divider>
 			<div class="payment-container">
-				<div layout="row" class="table">
+				<div layout="row">
 					<div flex="50" layout="column">
 						<div>Total Payable</div>
 						<div class="flor-green info">View all details</div>
@@ -79,10 +79,10 @@
 					</div>
 				</div>
 				<div layout="row">
-					<md-button class="main-button" flex-offset="5" flex="90">Proceed to Payment</md-button>
+					<md-button class="main-button" flex="100">Proceed to Payment</md-button>
 				</div>
 				<div layout="row">
-					<div flex-offset="5" flex="90" class="small policy">
+					<div class="small policy">
 						By proceeding you agree to the <a href="#">Hotel Booking Policy, Hotel Cancellation Policy and Terms & Conditions</a> of Ganga Kinare.
 					</div>
 				</div>
