--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			</div>
 			<md-divider></md-divider>
 			<div class="table">
-				<div layout="row" class="room-row">
+				<div layout="row" style="padding-bottom: 15px !important;">
 					<div layout="column" flex="33">
 						<div class="format-text">Semi Deluxe</div>
 						<div class="small light">AC Room Only</div>
