--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					</div>
 				</div>
 				<div layout="row">
-					<md-button class="main-button" flex="100">Proceed to Payment</md-button>
+					<md-button class="main-button" style="margin: 0 !important;" flex="100">Proceed to Payment</md-button>
 				</div>
 				<div layout="row">
 					<div class="small policy">
