--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
 			</div>
 			<md-divider></md-divider>
 			<div class="table" layout="row details">
-				<div flex="33">
-					Rooms &nbsp;<span class="light">2</span>
+				<div style="margin-right: 20px;">
+					Rooms &nbsp;&nbsp;<span class="light">2</span>
 				</div>
 				<div flex="33">
-					Adults &nbsp;<span class="light">4</span>
+					Adults &nbsp;&nbsp;<span class="light">4</span>
 				</div>
 			</div>
 			<md-divider></md-divider>
 			<div class="table" layout="row">
-				<div flex="40" layout="column">
-					<div class="light small">Check-in : 2:00 p.m.</div>
+				<div flex="50" layout="column">
+					<div class="light info">Check-in : 2:00 p.m.</div>
 					<div class="info">23 Sept 2017,Wed</div>
 				</div>
-				<div flex="40" layout-align="end end" flex-offset="20" layout="column">
-					<div class="light small">Check-out : 12:00 p.m.</div>
+				<div flex="50" layout-align="end end" layout="column">
+					<div class="light info">Check-out : 12:00 p.m.</div>
 					<div class="info">23 Sept 2017,Wed</div>
 				</div>
 			</div>
@@ -72,14 +72,14 @@
 				<div layout="row">
 					<div flex="50" layout="column">
 						<div>Total Payable</div>
-						<div class="flor-green info">View all details</div>
+						<div style="margin-top: 5px;" class="flor-green info">View all details</div>
 					</div>
 					<div flex="50" layout="column" class="align-right">
 						INR 23,000
 					</div>
 				</div>
 				<div layout="row">
-					<md-button class="main-button" style="margin: 0 !important;" flex="100">Proceed to Payment</md-button>
+					<md-button class="main-button" style="margin: 10px 0 !important;" flex="100">Proceed to Payment</md-button>
 				</div>
 				<div layout="row">
 					<div class="small policy">
