--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </head>
 <body ng-app="NewApp" ng-controller="AppCtrl">
 	<!-- Your HTML Content Here -->
-	<div class="main-all" layout="row" flex="90">
-		<div class="main-m" flex="50" layout="column">
+	<div class="main-all" layout="row" flex="90"> <!-- Main Div -->
+		<div class="main-m" flex="50" layout="column"> <!-- Step 1 Div -->
 			<div layout="row">
 				<div class="room-pic" flex="35">
 				<div class="heart-icon">
@@ -61,7 +61,7 @@
 				<p class="view-all view-more">View All</p>
 			</div>
 		</div>
-		<div flex="30" flex-md="40" flex-sm="60" flex-xs="90" flex-offset="5" layout="column"> 
+		<div flex="30" flex-md="40" flex-sm="60" flex-xs="90" flex-offset="5" layout="column"> <!-- Step 2 Div -->
 			<div layout="column" class="main">
 				<div class="table" layout="column" layout-align=" center">
 					<header class="format-text">Tariff Details</header>
