--- a/index.html
+++ b/index.html
@@ -162,8 +162,9 @@
   	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.6/angular-aria.min.js"></script>
   	<!-- Angular Material Library -->
   	<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.12/angular-material.min.js"></script>
-	<script src="./static/js/app.js"></script>
-	<script src="./static/js/model.js"></script>
-  	<!-- Your application bootstrap  -->
+	<!-- Your application -->
+	<script src="./static/js/component/app.js"></script>
+	<script src="./static/js/component/controller/Ctlr.js"></script>
+	<script src="./static/js/component/models/model.js"></script>
 </body>
 </html>
